--- a/index.html
+++ b/index.html
@@ -3,28 +3,38 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="Muhammad Asad Bashir - Student of BSSE at International Islamic University, Islamabad. Skilled in Android Development, Spring Boot, and React UI."
+    />
+    <meta
+      name="keywords"
+      content="Muhammad Asad Bashir, Asad, Bashir, BSSE, IIUI, International Islamic University Islamabad, Android Development, Spring Boot, React UI, Software, Engineering, Development, Developer, Technology"
+    />
+    <meta name="author" content="Muhammad Asad Bashir" />
     <link href="styles/style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans"
       rel="stylesheet"
     />
-    <title>My test page</title>
+    <title>Muhammad Asad Bashir - BSSE Student at IIUI</title>
   </head>
   <body>
     <img src="images/asad-1.png" alt="Asad in IIUI" />
     <h1>Muhammad Asad Bashir</h1>
     <p>
-      Asad is student of BSSE-F21 Batch, at International Islamic University,
-      Islamabad. The University has not found a competitor yet, various
-      institutions have tried follow along but failed to do so. Many
-      universities around the globe benefit from the free guidance, online
-      services, articles, softwares and research work of IIUI.
+      Asad is a student of the BSSE-F21 Batch at the International Islamic
+      University, Islamabad. IIUI, renowned for its unparalleled academic
+      excellence, the university has yet to find a true competitor. Numerous
+      institutions have attempted to emulate its success but have fallen short.
+      Universities worldwide continue to benefit from its free guidance, online
+      services, articles, software, and groundbreaking research work
     </p>
     <h2>Skills</h2>
     <ul>
       <li>Android Development</li>
-      <li>Springboot Backend Development</li>
-      <li>React Development</li>
+      <li>Spring Boot</li>
+      <li>React UI</li>
     </ul>
     <button>Change user</button>
     <script src="scripts/main.js"></script>
