--- a/index.html
+++ b/index.html
@@ -1,42 +1,186 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <meta
-      name="description"
-      content="Muhammad Asad Bashir - Student of BSSE at International Islamic University, Islamabad. Skilled in Android Development, Spring Boot, and React UI."
-    />
-    <meta
-      name="keywords"
-      content="Muhammad Asad Bashir, Asad, Bashir, BSSE, IIUI, International Islamic University Islamabad, Android Development, Spring Boot, React UI, Software, Engineering, Development, Developer, Technology"
-    />
-    <meta name="author" content="Muhammad Asad Bashir" />
-    <link href="styles/style.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="FRS.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <title>Muhammad Asad Bashir - BSSE Student at IIUI</title>
+    <title>First Resume</title>
   </head>
   <body>
-    <img src="images/asad-1.png" alt="Asad in IIUI" />
-    <h1>Muhammad Asad Bashir</h1>
-    <p>
-      Asad is a student of the BSSE-F21 Batch at the International Islamic
-      University, Islamabad. IIUI, renowned for its unparalleled academic
-      excellence, the university has yet to find a true competitor. Numerous
-      institutions have attempted to emulate its success but have fallen short.
-      Universities worldwide continue to benefit from its free guidance, online
-      services, articles, software, and groundbreaking research work
-    </p>
-    <h2>Skills</h2>
-    <ul>
-      <li>Android Development</li>
-      <li>Spring Boot</li>
-      <li>React UI</li>
-    </ul>
-    <button>Change user</button>
-    <script src="scripts/main.js"></script>
+    <!-- Blue container -->
+    <div class="blue-container">
+      <!-- White container -->
+      <div class="white-container">
+        <!-- First container -->
+        <div class="first-container">
+          <!-- First container first block -->
+          <div class="first-container-first-block">
+            <div style="display: flex">
+              <i
+                class="fa-regular fa-envelope fa-2x"
+                style="align-self: center; margin-right: 5px"
+              ></i>
+              <h2>About Me</h2>
+            </div>
+
+            <p>
+              I am a student of BS Software Engineering at International Islamic
+              University, Islamabad. I am interested in programming, backend
+              development, software development tools and technologies.
+            </p>
+          </div>
+
+          <!-- First container second block -->
+          <div class="first-container-second-block">
+            <h1 style="font-size: xx-large; margin-bottom: 0px">
+              M Asad Bashir
+            </h1>
+            <h2 style="font-size: large; margin-top: 0px">Software Engineer</h2>
+          </div>
+        </div>
+
+        <!-- Holder for second and third container -->
+        <div class="holder">
+          <!-- Second container -->
+          <div class="second-container" style="width: 50%">
+            <!-- Second container first block -->
+            <div class="second-container-first-block">
+              <div style="display: flex">
+                <i
+                  class="fa-regular fa-building fa-2x"
+                  style="align-self: center; margin-right: 5px"
+                ></i>
+                <h2>Jobs Experience</h2>
+              </div>
+
+              <p>
+                I don't have any job Experience, but during my studies I have
+                learnt android development with jetpack compose , java desktop
+                development and have completed a web Engineering course as well.
+              </p>
+            </div>
+
+            <!-- Second container second block -->
+            <div class="second-container-second-block">
+              <div style="display: flex">
+                <i
+                  class="fa-regular fa-map fa-2x"
+                  style="align-self: center; margin-right: 5px"
+                ></i>
+                <h2>Skills</h2>
+              </div>
+
+              <ul>
+                <li>C++</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>Kotlin</li>
+                <li>MySQL</li>
+                <li>AWT & SWING</li>
+              </ul>
+            </div>
+
+            <!-- Second container third block -->
+            <div class="second-container-third-block">
+              <div style="display: flex">
+                <i
+                  class="fa-regular fa-lemon fa-2x"
+                  style="align-self: center; margin-right: 5px"
+                ></i>
+                <h2>Languages</h2>
+              </div>
+
+              <ul>
+                <li>English</li>
+                <li>Urdu</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Third Container -->
+          <div
+            class="third-container"
+            style="width: 50%; margin-left: 15px; margin-top: 15px"
+          >
+            <!-- Third container A -->
+            <div class="third-container-a">
+              <img src="../first-cv/asad-red-logo.png" alt="profile photo" />
+            </div>
+
+            <!-- Third container B -->
+            <div class="third-container-b">
+              <!-- Third container B first -->
+              <div class="third-container-b-first">
+                <div style="display: flex">
+                  <i
+                    class="fa-regular fa-image fa-2x"
+                    style="align-self: center; margin-right: 5px"
+                  ></i>
+                  <h2>Contact Me</h2>
+                </div>
+                <div style="display: flex">
+                  <i
+                    class="fa-regular fa-image"
+                    style="align-self: center; margin-right: 5px"
+                  ></i>
+                  <p>+92-3079894102</p>
+                </div>
+                <div style="display: flex">
+                  <i
+                    class="fa-regular fa-newspaper"
+                    style="align-self: center; margin-right: 5px"
+                  ></i>
+                  <p>mabofficial33@gmail.com</p>
+                </div>
+                <div style="display: flex">
+                  <i
+                    class="fa-regular fa-hospital fa-sm"
+                    style="align-self: center; margin-right: 5px"
+                  ></i>
+                  <p>CB-235/2 Lalazar, Wah Cantt</p>
+                </div>
+              </div>
+
+              <!-- Third container B Second -->
+              <div class="third-container-b-second">
+                <div style="display: flex">
+                  <i
+                    class="fa-regular fa-lightbulb fa-2x"
+                    style="align-self: center; margin-right: 5px"
+                  ></i>
+                  <h2>Education</h2>
+                </div>
+                <div>
+                  <p>
+                    Bachelor of Software Engineering, <br />
+                    International Islamic University, Islamabad <br />
+                    2021-2025
+                  </p>
+                </div>
+              </div>
+
+              <!-- Third container B Third -->
+              <div class="third-container-b-third">
+                <div style="display: flex">
+                  <i
+                    class="fa-regular fa-money-bill-1 fa-2x"
+                    style="align-self: center; margin-right: 5px"
+                  ></i>
+                  <h2>References</h2>
+                </div>
+                <div>
+                  <p>Google for Developers</p>
+                  <a href="https://g.dev/oneAsad">g.dev/oneAsad</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
