--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="FRS.css" />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>First Resume</title>
   </head>
   <body>
@@ -108,7 +108,7 @@
           >
             <!-- Third container A -->
             <div class="third-container-a">
-              <img src="../first-cv/asad-red-logo.png" alt="profile photo" />
+              <img src="asad-1.png" alt="profile photo" />
             </div>
 
             <!-- Third container B -->
