--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           >
             <!-- Third container A -->
             <div class="third-container-a">
-              <img src="asad-1.png" alt="profile photo" />
+              <img src="asad-red-logo.png" alt="profile photo" />
             </div>
 
             <!-- Third container B -->
