made public safe

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
             </div>
 
             <p>
-              I am a student of BS Software Engineering at International Islamic
-              University, Islamabad. I am interested in programming, backend
-              development, software development tools and technologies.
+              As a BS Software Engineering student at International Islamic University, Islamabad, I’m deeply immersed in the world of code, from backend systems to modern software development tools. My focus is on creating efficient, scalable solutions that bridge innovation and real-world impact.
             </p>
           </div>
 
@@ -58,9 +56,7 @@
               </div>
 
               <p>
-                I don't have any job Experience, but during my studies I have
-                learnt android development with jetpack compose , java desktop
-                development and have completed a web Engineering course as well.
+                During my studies, I’ve developed a strong foundation in Android development using Jetpack Compose, Java desktop applications, and web engineering. I’m passionate about turning concepts into functional, well-designed solutions across different platforms.
               </p>
             </div>
 
@@ -127,21 +123,21 @@
                     class="fa-regular fa-image"
                     style="align-self: center; margin-right: 5px"
                   ></i>
-                  <p>+92-3079894102</p>
+                  <p>+92-123456789</p>
                 </div>
                 <div style="display: flex">
                   <i
                     class="fa-regular fa-newspaper"
                     style="align-self: center; margin-right: 5px"
                   ></i>
-                  <p>mabofficial33@gmail.com</p>
+                  <p>brucefirstid@gmail.com</p>
                 </div>
                 <div style="display: flex">
                   <i
                     class="fa-regular fa-hospital fa-sm"
                     style="align-self: center; margin-right: 5px"
                   ></i>
-                  <p>CB-235/2 Lalazar, Wah Cantt</p>
+                  <p>Punjab, Pakistan</p>
                 </div>
               </div>
 
